--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     </header>
     <main class="parallax">
         <div>
-
             <section class="section-div1">
                 <a class="grid__item" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)"
                     target="_blank">
@@ -42,7 +41,6 @@
                     <img class="grid__item-img" src="./assets/gif/capitan.gif" alt="Película de Capitán América" />
                 </a>
             </section>
-
             <section class="section-div2">
                 <a class="grid__item" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)"
                     target="_blank">
@@ -83,7 +81,6 @@
                 de películas de Marvel, estuvo satisfecho con las películas de Spider-Man de Sam Raimi, pero no lo
                 estuvo con las demás. Como resultado, se decidió formar Marvel Studios, el primer estudio de cine
                 independiente importante desde DreamWorks.
-                
             </p>
         </section>
         <section class="grid__video">
@@ -108,12 +105,11 @@
             </a>
             <h4>&copy 2022, MITCH todos los derechos reservados</h4>
 
-            <label for="suscripcion">Suscribite a nuestro newsletter:</label>
+            <label class="font-contacto" for="suscripcion">Suscribite a nuestro newsletter:</label>
             <input type="email" id="correo" name="correo" placeholder="Ingrese su mail" />
             <button type="submit">Enviar</button>
 
         </section>
-
     </footer>
 </body>
 
