--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -2,14 +2,14 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Universo Cinematográfico de Marvel - Películas Directores Protagonistas</title>
   <link rel="shortcut icon" href="../assets/images/favicon.ico" />
   <link rel="stylesheet" href="../css/style.css" />
-  <meta name="description" content="Una página que te cuenta el Universo de películas Marvel, sus protagonistas e historia."/>
-
+  <meta name="description"
+    content="Una página que te cuenta el Universo de películas Marvel, sus protagonistas e historia." />
 </head>
 
 <body>
@@ -17,9 +17,7 @@
     <a class="grid-logo" href="./index.html">
       <img class="grid-logo-item" src="../assets/images/mcu.png" alt="MCU-Home">
     </a>
-
     <h1 class="subtitulo">Películas Heróicas que dieron inicio al universo y sus protagonistas</h1>
-
     <nav>
       <ul class="estilo-ul">
         <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="../index.html">Home</a></li>
@@ -28,11 +26,10 @@
         <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./contacto.html">Contacto</a></li>
       </ul>
     </nav>
-
   </header>
   <main class="parallax">
     <section class="section-table">
-       <div>
+      <div>
         <p class="texto1">La Saga del Infinito es el nombre dado a la historia global que comprendían las veintitrés
           primeras películas
           del Universo Cinematográfico de Marvel, con el enfoque principal en torno a las Gemas del Infinito, seis
@@ -42,7 +39,6 @@
           destruido a causa de la superpoblación. Sin embargo, esto lo llevaría a tener diversos enfrentamientos con
           distintos equipos de superhéroes tales como los Vengadores y los Guardianes de la Galaxia.
         </p>
-        
         <p class="texto2">
           La primera película del MCU es Iron Man (2008), que comenzó las películas de la Fase Uno
           culminando en la
@@ -53,9 +49,6 @@
           Las películas de la Fase Cuatro comenzaron con Black Widow (2021).
         </p>
       </div>
-
-
-
       <table class="table">
         <thead>
           <tr class="thead-tr">
@@ -66,14 +59,14 @@
             <th scope="col">Portada</th>
           </tr>
         </thead>
-
         <tbody>
           <tr class="tbody-tr">
             <th scope="row">Ironman</th>
             <td>2008</td>
             <td>Robert Downey Jr</td>
             <td>Jon Favreau</td>
-            <td><a href="https://en.wikipedia.org/wiki/Iron_Man_(2008_film)" target="_blank">
+            <td>
+              <a href="https://en.wikipedia.org/wiki/Iron_Man_(2008_film)" target="_blank">
                 <img class="portada-peli" src="../assets/images/ironman.jpg" alt="ironman-pelicula" />
               </a>
             </td>
@@ -83,7 +76,8 @@
             <td>2008</td>
             <td>Edward Norton</td>
             <td>Louis Leterrier</td>
-            <td><a href="https://en.wikipedia.org/wiki/The_Incredible_Hulk_(film)" target="_blank">
+            <td>
+              <a href="https://en.wikipedia.org/wiki/The_Incredible_Hulk_(film)" target="_blank">
                 <img class="portada-peli" src="../assets/images/the-incredible-hulk.jpg" alt="hulk-pelicula" />
               </a>
             </td>
@@ -93,7 +87,8 @@
             <td>2011</td>
             <td>Cris Evans</td>
             <td>Joe Johnston</td>
-            <td><a href="https://en.wikipedia.org/wiki/Captain_America:_The_First_Avenger" target="_blank">
+            <td>
+              <a href="https://en.wikipedia.org/wiki/Captain_America:_The_First_Avenger" target="_blank">
                 <img class="portada-peli" src="../assets/images/capitan-america.jpg" alt="capitan-america-pelicula" />
               </a>
             </td>
@@ -103,7 +98,8 @@
             <td>2011</td>
             <td>Cris Hemsworth</td>
             <td>Kenneth Branagh</td>
-            <td><a href="https://en.wikipedia.org/wiki/Thor_(film)" target="_blank">
+            <td>
+              <a href="https://en.wikipedia.org/wiki/Thor_(film)" target="_blank">
                 <img class="portada-peli" src="../assets/images/thor.jpg" alt="thor-pelicula" />
               </a>
             </td>
@@ -113,7 +109,8 @@
             <td>2021</td>
             <td>Scarlett Johansson</td>
             <td>Cate Shortland</td>
-            <td><a href="https://en.wikipedia.org/wiki/Black_Widow_(2021_film)" target="_blank">
+            <td>
+              <a href="https://en.wikipedia.org/wiki/Black_Widow_(2021_film)" target="_blank">
                 <img class="portada-peli" src="../assets/images/black-widow.jpg" alt="blck-widow-pelicula" />
               </a>
             </td>
@@ -138,13 +135,11 @@
       </a>
       <h4>&copy 2022, MITCH todos los derechos reservados</h4>
 
-      <label for="suscripcion">Suscribite a nuestro newsletter:</label>
+      <label class="font-contacto" for="suscripcion">Suscribite a nuestro newsletter:</label>
       <input type="email" id="correo" name="correo" placeholder="Ingrese su mail" />
       <button type="submit">Enviar</button>
 
     </section>
-
   </footer>
 </body>
-
 </html>
