--- a/pages/cronologia.html
+++ b/pages/cronologia.html
@@ -2,14 +2,13 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Universo Cinematográfico de Marvel - Cronología de Películas</title>
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" href="../css/style.css" />
-    <meta name="description" content="El Universo de películas Marvel, su orden de estreno y cronológico."/>
-
+    <meta name="description" content="El Universo de películas Marvel, su orden de estreno y cronológico." />
 </head>
 
 <body>
@@ -17,28 +16,27 @@
         <a class="grid-logo" href="./index.html">
             <img class="grid-logo-item" src="../assets/images/mcu.png" alt="MCU-Home">
         </a>
-
         <h1 class="subtitulo">Cuál fue el orden de estreno, y cómo mirarlas</h1>
-
         <nav>
             <ul class="estilo-ul">
                 <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="../index.html">Home</a></li>
                 <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./peliculas.html">Películas</a></li>
-                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./cronologia.html">Cronología</a></li>
+                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./cronologia.html">Cronología</a>
+                </li>
                 <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
-
     </header>
     <main class="parallax">
-
-        <div>
+        <section>
             <div>
-                <p class="texto1">La forma más tradicional es seguir el orden de estreno. A fin de cuentas, así es como millones de
+                <p class="texto1">La forma más tradicional es seguir el orden de estreno. A fin de cuentas, así es como
+                    millones de
                     personas las vieron, por lo que es una opción perfectamente respetable. Sin embargo, las aventuras
                     de los superhéroes interpretados, entre otros, por Robert Downey Jr., Chris Evans, Scarlett
                     Johansson y Chris Hemsworth tienen un orden cronológico diferente al de su lanzamiento en salas.
-                    La opción preferida de aquellos que quieran ver las cosas en el orden que suceden dentro de la línea temporal oficial según Marvel.
+                    La opción preferida de aquellos que quieran ver las cosas en el orden que suceden dentro de la línea
+                    temporal oficial según Marvel.
                 </p>
             </div>
             <h2 class="h2-cronologia">Orden Cronológico</h2>
@@ -62,37 +60,33 @@
                     </ol>
                 </div>
             </div>
-            <div>
-
+            <h2 class="h2-cronologia ">Orden de Estreno</h2>
+            <div class="estilo-section-crono">
                 <div>
-                    <h2 class="h2-cronologia ">Orden de Estreno</h2>
-                    <div class="estilo-section-crono">
-                        <div>
-                            <ol class="crono-item">
-                                <li class="list-group-item">2008: "Ironman", "El increible Hulk"</li>
-                                <li class="list-group-item">2010: "Ironman 2"</li>
-                                <li class="list-group-item">2011: "Thor", "Capitán America:El Primer Vengador"</li>
-                                <li class="list-group-item">2012: "Los Vengadores"</li>
-                                <li class="list-group-item">2013: "Ironman 3", "Thor: El mundo oscuro"</li>
-                                <li class="list-group-item">2014: "Capitán America: El soldado de invierno", "Guardianes
-                                    de la galaxia"</li>
-                                <li class="list-group-item">2015: "Vengadores: La era de Ultron", "Antman"</li>
-                                <li class="list-group-item">2016: "Capitán América: Civil War", "Doctor Strange"</li>
-                                <li class="list-group-item">2017: "Guardianes de la Galaxia Vol. 2", "Spider-Man:
-                                    Homecoming", "Thor: Ragnarok"</li>
-                                <li class="list-group-item">2018: "Black Panther", "Vengadores: Infinity War", "Ant-Man
-                                    y la Avispa"</li>
-                                <li class="list-group-item">2019: "Capitana Marvel", "Vengadores: Endgame", "Spider-Man:
-                                    Lejos de casa"</li>
-                            </ol>
-                        </div>
-                        <div>
-                            <img class="crono-item" src="../assets/images/aparicion-recorte.JPG" alt="imagen orden aparicion" />
-                        </div>
-                    </div>
-                    <div>
+                    <ol class="crono-item">
+                        <li class="list-group-item">2008: "Ironman", "El increible Hulk"</li>
+                        <li class="list-group-item">2010: "Ironman 2"</li>
+                        <li class="list-group-item">2011: "Thor", "Capitán America:El Primer Vengador"</li>
+                        <li class="list-group-item">2012: "Los Vengadores"</li>
+                        <li class="list-group-item">2013: "Ironman 3", "Thor: El mundo oscuro"</li>
+                        <li class="list-group-item">2014: "Capitán America: El soldado de invierno", "Guardianes
+                            de la galaxia"</li>
+                        <li class="list-group-item">2015: "Vengadores: La era de Ultron", "Antman"</li>
+                        <li class="list-group-item">2016: "Capitán América: Civil War", "Doctor Strange"</li>
+                        <li class="list-group-item">2017: "Guardianes de la Galaxia Vol. 2", "Spider-Man:
+                            Homecoming", "Thor: Ragnarok"</li>
+                        <li class="list-group-item">2018: "Black Panther", "Vengadores: Infinity War", "Ant-Man
+                            y la Avispa"</li>
+                        <li class="list-group-item">2019: "Capitana Marvel", "Vengadores: Endgame", "Spider-Man:
+                            Lejos de casa"</li>
+                    </ol>
+                </div>
+                <div>
+                    <img class="crono-item" src="../assets/images/aparicion-recorte.JPG" alt="imagen orden aparicion" />
+                </div>
+            </div>
+        </section>
     </main>
-
     <footer>
         <section class="footer">
             <a href="https://www.instagram.com/" target="_blank">
@@ -109,14 +103,11 @@
             </a>
             <h4>&copy 2022, MITCH todos los derechos reservados</h4>
 
-            <label for="suscripcion">Suscribite a nuestro newsletter:</label>
+            <label class="font-contacto" for="suscripcion">Suscribite a nuestro newsletter:</label>
             <input type="email" id="correo" name="correo" placeholder="Ingrese su mail" />
             <button type="submit">Enviar</button>
-
         </section>
-
     </footer>
-
 </body>
 
 </html>
