correccion de imagenes en cronologia

--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
         <nav>
             <ul class="estilo-ul">
                 <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="./index.html">Home</a></li>
-                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./pages/peliculas.html">Películas</a>
-                </li>
-                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a"
-                        href="./pages/cronologia.html">Cronología</a></li>
-                <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./pages/contacto.html">Contacto</a>
-                </li>
+                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./pages/peliculas.html">Películas</a></li>
+                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./pages/cronologia.html">Cronología</a></li>
+                <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
